# Oleilu-Menu-Web

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/: create_db.py  database.py  email_service.py  main.py  models.py  pyproject.toml  schemas.py  security.py  seed.py
frontend/: index.html  modify_colors.cjs  modify_colors.py  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  constants.js  index.css
frontend/src/components/: Header.jsx  LoginModal.jsx  ProductCard.jsx  ProductEditor.jsx
