[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]==0.115.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
]

[tool.uv]
package = false
